# local_llm

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: README.md  setup.md  windows-cuda.md
learning/: 2026-04-19-ruff-vs-legacy-linters.md  README.md
plans/: 2026-04-19-initial-plan.md
src/local_llm/bench/: __init__.py  harness.py  prompts.py
src/local_llm/engines/: __init__.py  airllm_runner.py  base.py  llamacpp_runner.py  ollama_runner.py
src/local_llm/scripts/: run_airllm.py  run_llamacpp.py  run_ollama.py
tests/: test_harness.py  test_prompts.py  test_runners_smoke.py
